--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
 <div class = 'container'>
   <div class = 'row'>
     <div class = 'col-xs-2'>
-      <a class = 'navbar-brand' href = '#' ><%= image_tag 'advglasshome.gif' %></a>
+      <a class = 'navbar-brand' href = '/' ><%= image_tag 'advglasshome.gif' %></a>
     </div>
       <ul class = 'nav navbar-nav navbar-right list-unstyled'>
 
