--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -3,7 +3,7 @@
   <h2> Proudly Made in the United States </h2>
   <p class='secondary'> Handcrafted in North Webster, IN </p>
 </div>
-<div class = 'container'>
+<div class = 'container gallery-container'>
   <div class = 'row'>
     <div class = 'col-sm-4'>
       <a href = '#' class = 'gallery-link'>
