--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -14,8 +14,15 @@ h2{
 
 .hero{
   h1{
-  font-size: 53px;
-
+    font-size: 53px;
+  }
 }
+
+h3{
+  color: rgb(18, 37, 76);
 }
 
+.hero{
+  color: #0E3076;
+  font-size: 28px;
+}
