--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,4 +1,4 @@
-<%= render 'home/carousel' %>
+<%= render 'layouts/carousel' %>
 <div class = 'text-center' >
   <h2> Proudly Made in the United States </h2>
   <p class='secondary'> Handcrafted in North Webster, IN </p>
