--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -6,7 +6,7 @@
 <div class = 'container gallery-container'>
   <div class = 'row'>
     <div class = 'col-sm-4'>
-      <a href = 'gallery/boats' class = 'gallery-link'>
+      <a href = 'boats' class = 'gallery-link'>
         <div class = 'gallery-option text-center'>
           <%= image_tag 'flamingos/brothers_front.jpg' %>
           <div class = 'gallery-option-description'>
