--- a/app/assets/stylesheets/thumbnail_slider.css.scss
+++ b/app/assets/stylesheets/thumbnail_slider.css.scss
@@ -23,6 +23,7 @@
     left:  16.667%;
   }
 }
+
 .carousel-control {
   width:  4%; 
   top: 40%;
@@ -32,3 +33,33 @@
   background-image:none;
 }
 
+.paddleboat-container  .carousel-control{
+  padding: 38px 18px;
+  opacity: 1;
+  background-color: #808080;
+      margin: -55px -30px 45px -31px;
+  @media(max-width: 1199px) and (min-width: 992px){
+    &.right, &.left{
+      margin: -178px -30px 45px -31px;
+      padding: 194px 0px;
+    }
+  }
+  @media(max-width: 991px) and (min-width: 768px){
+    &.right, &.left{
+      margin: -139px -30px 45px -31px;
+      padding: 140px 7px;
+    }
+  }
+  @media(max-width: 767px){
+    &.right, &.left{
+      margin: -248px -30px 42px -30px;
+      padding: 288px 20px;
+    }
+  }
+  &:focus{
+    opacity: 1;
+    &:hover{
+      opacity: 0.9;
+    }
+  }
+}
