--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,5 +1,5 @@
-<hr class = 'boat-gallery-carousel' />
-<div class = 'hero'>
-  <%= @title %>
+<hr class = 'nav-padding' />
+<div class = 'container hero'>
+  <h1><%= @title %></h1>
 </div>
 <%= render "layouts/product_display" %>
