--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,13 +7,13 @@
       <ul class = 'nav navbar-nav navbar-right list-unstyled'>
 
         <li class = 'hidden-xs hidden-sm'>
-          <a class="dropdown hover" aria-expanded="false">
+          <a class="dropdown hover" aria-expanded="false" href = '/boats'>
             BOATS
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
             <li role="presentation"><a role="menuitem"  href="#">Paddleboats</a></li>
-            <li role="presentation"><a role="menuitem"  href="#">Canoes</a></li>
+            <li role="presentation"><a role="menuitem"  href="/boats/canoes">Canoes</a></li>
             <li role="presentation"><a role="menuitem"  href="#">Barges</a></li>
           </ul>
         </li>
