--- a/app/views/layouts/_product_show.html.erb
+++ b/app/views/layouts/_product_show.html.erb
@@ -1,29 +1,31 @@
 <div class = 'container'>
-<div class = 'row'>
-  <div class = 'col-md-1'> <!--TODO - figure out what to do for small screens-->
-    <!-- TODO: make each a link, so it's intuitive to click them?? the effect of clicking being making it active -> the larger display-->
-    <% @pictures.each_with_index do |picture, index| %>
-      <% active = index == 0 ? 'active ' : "" %>
+  <div class = 'row'>
+    <%= form_for @product do |f| %>
+      <div class = 'col-md-1'> <!--TODO - figure out what to do for small screens-->
+      <!-- TODO: make each a link, so it's intuitive to click them?? the effect of clicking being making it active -> the larger display-->
+      <% @pictures.each_with_index do |picture, index| %>
+        <% active = index == 0 ? 'active ' : "" %>
       <%= image_tag picture, :class => active + 'thumbnail gallery-thumbnail'%>
     <% end %>
-  </div>
-  <div class = 'product-display col-md-6'>
-    <div class = 'image-active'>
-      <%= image_tag @pictures[0] %>
     </div>
-  </div>
-  <div class = 'col-md-2 options'>
-    <h3> Available Options </h3>
-    <ul class = 'options-list'>
-      <% @display_options.each do |option| %>
-        <li><%=option %></li>
+    <div class = 'product-display col-md-6'>
+      <div class = 'image-active'>
+        <%= image_tag @pictures[0] %>
+      </div>
+    </div>
+    <div class = 'col-md-2 options'>
+      <h3> Available Options </h3>
+      <ul class = 'options-list'>
+        <% @display_options.each do |option| %>
+          <li><%=option %></li>
       <% end %>
-    </ul>
+      </ul>
+    </div>
+    <div class = 'col-md-2 product-persistence col-lg-offset-1 text-center'>
+      <a class = 'btn btn-primary'><i class = 'fa fa-shopping-cart'></i> I want one!</a>
+      <hr />
+      <a class = 'btn btn-success'><i class = 'fa fa-bookmark'></i> Bookmark for later</a>
+    </div>
+  <% end %>
   </div>
-  <div class = 'col-md-2 product-persistence col-lg-offset-1 text-center'>
-    <a class = 'btn btn-primary'><i class = 'fa fa-shopping-cart'></i> I want one!</a>
-    <hr />
-    <a class = 'btn btn-success'><i class = 'fa fa-bookmark'></i> Bookmark for later</a>
-  </div>
-</div>
 </div>
