--- a/app/assets/stylesheets/devise/login.css.scss
+++ b/app/assets/stylesheets/devise/login.css.scss
@@ -14,6 +14,11 @@
 
 .login-background{
   @media (min-width: 992px){
-  background-image: image-url('paddleboats/seaworldcropped.jpg')
-}
+    height: 70vh;
+    padding-top: 7vh;
+    background-image: image-url('paddleboats/seaworldcropped.jpg')
+  }
+  margin-bottom: -15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
