--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,60 +4,71 @@
     <div class = 'col-xs-2'>
       <a class = 'navbar-brand' href = '/' ><%= image_tag 'advglasshome.gif' %></a>
     </div>
-      <ul class = 'nav navbar-nav navbar-right list-unstyled'>
+    <ul class = 'nav navbar-nav navbar-right list-unstyled'>
 
-        <li class = 'hidden-xs hidden-sm'>
-          <a class="dropdown hover" aria-expanded="false" href = '/boats'>
-            BOATS
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a role="menuitem"  href="#">Paddleboats</a></li>
-            <li role="presentation"><a role="menuitem"  href="/boats/canoes">Canoes</a></li>
-            <li role="presentation"><a role="menuitem"  href="#">Barges</a></li>
-          </ul>
-        </li>
+      <li class = 'hidden-xs hidden-sm'>
+        <a class="dropdown hover" aria-expanded="false" href = '/boats'>
+          BOATS
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
+          <li role="presentation"><a role="menuitem"  href="#">Paddleboats</a></li>
+          <li role="presentation"><a role="menuitem"  href="/boats/canoes">Canoes</a></li>
+          <li role="presentation"><a role="menuitem"  href="#">Barges</a></li>
+        </ul>
+      </li>
 
-        <li class = 'hidden-xs hidden-sm'>
-          <a class="dropdown hover" aria-expanded="false">
-            EXTRAS
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a role="menuitem"  href="/parts">Boat Parts</a></li>
-            <li role="presentation"><a role="menuitem"  href="/docks">Docks</a></li>
-            <li role="presentation"><a role="menuitem"  href="/lifts">Lifts</a></li>
-          </ul>
-        </li>
+      <li class = 'hidden-xs hidden-sm'>
+        <a class="dropdown hover" aria-expanded="false">
+          EXTRAS
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownMenu1">
+          <li role="presentation"><a role="menuitem"  href="/parts">Boat Parts</a></li>
+          <li role="presentation"><a role="menuitem"  href="/docks">Docks</a></li>
+          <li role="presentation"><a role="menuitem"  href="/lifts">Lifts</a></li>
+        </ul>
+      </li>
 
-        <li class= 'hidden-xs hidden-sm'>
-          <a class="dropdown hover" aria-expanded="false">
-            ORDER
-            <span class="caret"></span>
-          </a>
+      <li class= 'hidden-xs hidden-sm'>
+        <a class="dropdown hover" aria-expanded="false">
+          ORDER
+          <span class="caret"></span>
+        </a>
 
-          <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a role="menuitem"  href="/boats/build">Boats</a></li>
-            <li role="presentation"><a role="menuitem"  href="/parts">Parts</a></li>
-          </ul>
-        </li>
+        <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownMenu1">
+          <li role="presentation"><a role="menuitem"  href="/boats/build">Boats</a></li>
+          <li role="presentation"><a role="menuitem"  href="/parts">Parts</a></li>
+        </ul>
+      </li>
 
 
-        <li class = 'visible-xs-inline-block visible-sm-inline-block bars'>
+      <li class = 'visible-xs-inline-block visible-sm-inline-block bars'>
         <a class = 'btn btn-default dropdown-toggle bars' data-toggle='dropdown' href = '#'><span class = 'fa fa-bars fa-3x'></span> </a>
         <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/boats">Boats</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Extras</a></li><!--TODO - where should these 3 go? -->
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Order</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Cart</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/shopping_cart">Cart</a></li>
+          <% if current_user %>
+            <li role="presentation">
+              <%= link_to " Log out", destroy_user_session_path, :method => :delete, :class => 'fa fa-sign-out', :role=> "menuitem", :tabindex=>"-1"%>
+            </li>
+          <% else %>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="/users/sign_in">Log In</a></li>
+          <% end %>
         </ul>
-        </li>
+      </li>
 
-        <li class = 'hidden-xs hidden-sm'>
-        <a href = '#' ><span class = 'fa fa-shopping-cart'></span> Cart </a>
-        </li>
-      </ul>
-    </div>
+      <li class = 'hidden-xs hidden-sm'>
+        <a href = '/shopping_cart' ><span class = 'fa fa-shopping-cart'></span> Cart </a>
+      </li>
+      <% if current_user %>
+        <li class = 'hidden-xs hidden-sm'><%= link_to " Log out", destroy_user_session_path, :method => :delete, :class => 'fa fa-sign-out' %></li>
+      <% else %>
+        <li class = 'hidden-xs hidden-sm'><a href="/users/sign_in"><span class = 'fa fa-sign-out'> Log In</a></li>
+      <% end %>
+    </ul>
   </div>
 </div>
 </nav>
