--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -66,7 +66,7 @@
       <% if current_user %>
         <li class = 'hidden-xs hidden-sm'><%= link_to " Log out", destroy_user_session_path, :method => :delete, :class => 'fa fa-sign-out' %></li>
       <% else %>
-        <li class = 'hidden-xs hidden-sm'><a href="/users/sign_in"><span class = 'fa fa-sign-out'> Log In</a></li>
+        <li class = 'hidden-xs hidden-sm'><a href="/users/sign_in"><span class = 'fa fa-sign-out'></span> Log In</a></li>
       <% end %>
     </ul>
   </div>
