--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -2,23 +2,37 @@
   <%= render 'empty'%>
 <% else %>
   <div class = 'container-fluid'>
-  <% @shopping_cart.products.each do |product| %>
-    <div class = 'row-fluid clearfix'>
-      <div class = 'col-sm-2'> <!-- picture -->
-        <a href="/boats/mark_twains"><%= image_tag 'paddleboats/mark_twains/thumbnail.jpg',  :class=>"img-responsive thumbnail"%><span>Mark Twain</span></a>
+    <div class = 'row-fluid'>
+      <div class = 'col-sm-11'>
+        <% @shopping_cart.products.uniq.each do |product| %>
+          <div class = 'row-fluid clearfix'>
+            <div class = 'col-sm-2'> <!-- picture -->
+              <a href="/boats/mark_twains"><%= image_tag 'paddleboats/mark_twains/thumbnail.jpg',  :class=>"img-responsive thumbnail"%></a>
+            </div>
+            <div class = 'col-sm-6'>
+              <span class = 'cart-product-title'> <%= link_to product.name, product_path(product) %> </span>
+              <span> <%= product.description %> </span>
+              <br />
+              <span> <%= link_to 'Remove' %> </span>
+            </div>
+            <div class = 'col-sm-2'><!-- Price -->
+              <span> $<%= product.quantity * product.price %>  </span>
+              <% if product.quantity > 1 %>
+                <span>(<%= product.quantity %> @ $<%= product.price %>) </span>
+              <% end %>
+            </div>
+            <div class = 'col-sm-2'><!-- Qty -->
+              <%= form_tag('#some_path') do %>
+                <%= select_tag "quantity", options_for_select((0..10).to_a, product.quantity), :class => 'btn invisible-xs' %>
+              <% end %>
+            </div>
+          </div>
+          <% end %>
       </div>
-      <div class = 'col-sm-6'><!-- Title & brief description. Maybe some specs too? -->
-        <span> <%=link_to product.name, product_path(product) %> </span>
-        <span> <%= product.description %> </span>
-      </div>
-      <div class = 'col-sm-2'><!-- Price -->
-        <span> hello </span>
-      </div>
-      <div class = 'col-sm-2'><!-- Qty -->
-        <span> hello </span>
+      <div class = 'col-sm-1'>
+        <%= link_to 'Check Out', checkout_path, :shopping_cart => @shopping_cart %>
       </div>
     </div>
-  <% end %>
   </div>
 
 <% end %>
