--- a/app/views/layouts/_product_show.html.erb
+++ b/app/views/layouts/_product_show.html.erb
@@ -13,22 +13,23 @@
       </div>
     </div>
     <%= form_for @product do |f| %>
-      <input type='hidden' name='shopping_cart_id' value=<%=@cart.id%>>
-    <div class = 'col-md-2 options'>
-      <h3> Available Options </h3>
-      <ul class = 'options-list list-unstyled'>
-        <% @product.available_options.each do |option| %>
-          <li><%=check_box"#{@product.class_name.downcase}[option_ids]", option.id %> <%=option.description%></li>
-      <% end %>
-      </ul>
-    </div>
-    <div class = 'col-md-2 product-persistence col-lg-offset-1 text-center'>
-      <button type = 'submit' class = 'btn btn-primary'>
-        <i class = 'fa fa-shopping-cart'></i> I want one!
-      </button>
-      <hr />
-      <a class = 'btn btn-success'><i class = 'fa fa-bookmark'></i> Bookmark for later</a>
-    </div>
-      <% end %>
+      <%= f.hidden_field :shopping_cart_id, value: @cart.id%>
+      <%= f.hidden_field :base_model_id, value: @product.base_model_id %>
+      <div class = 'col-md-2 options'>
+        <h3> Available Options </h3>
+        <ul class = 'options-list list-unstyled'>
+          <% @product.available_options.each do |option| %>
+            <li><%=check_box"#{@product.class_name.downcase}[option_ids]", option.id %> <%=option.description%></li>
+          <% end %>
+        </ul>
+      </div>
+      <div class = 'col-md-2 product-persistence col-lg-offset-1 text-center'>
+        <%= button_tag type: 'submit', class: 'btn btn-primary' do %>
+          <i class = 'fa fa-shopping-cart'></i> I want one!
+        <% end %>
+        <hr />
+        <a class = 'btn btn-success'><i class = 'fa fa-bookmark'></i> Bookmark for later</a>
+      </div>
+    <% end %>
   </div>
 </div>
