--- a/app/assets/stylesheets/_product_display.css.scss
+++ b/app/assets/stylesheets/_product_display.css.scss
@@ -18,3 +18,42 @@ img.thumbnail-active{
     margin-bottom: 5px;
   }
 }
+
+.delete-picture{
+  color: #ffffff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+  position: absolute;
+  z-index: 1;
+  padding: 0;
+  border-radius: 13px;
+  top: 0px;
+  right: 0px;
+  height: 17px;
+  line-height: 0;
+}
+
+.edit_boat{
+  position:relative;
+}
+
+.fileupload-mask{
+  img{
+    width: 100%;
+  }
+  z-index: -1;
+
+}
+
+input#fileupload{
+  opacity: 0;
+  margin-bottom: -70px;
+  z-index: 1;
+  height: 70px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.product-price{
+  font-size: 17px;
+}
