--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -59,7 +59,7 @@ h3{
 
 .required{
   &:after{
-    content: ' \f069';
+    content: "\f05c";
     font-family: FontAwesome;
     color: red;
     font-size: 7px;
@@ -67,4 +67,12 @@ h3{
     position: absolute;
     top: 4px;
   }
+}
+
+.sm-bottom-padding{
+  padding-bottom: 5px;
+}
+
+.full-width{
+  width: 100%;
 }
