--- a/app/views/boats/paddleboats/index.html.erb
+++ b/app/views/boats/paddleboats/index.html.erb
@@ -2,12 +2,59 @@
 <div class = 'hero-carousel'>
   <%= render 'layouts/carousel'%>
 </div>
-
-<!-- Thoughts...
-  An array of large pictures, all ending in _hero
-  An array of other pictures
-  This could wind up having the same look as the home page 
-  Consider refactoring the home page to look this way
-<%# render 'layouts/product_index' %>
--->
-
+<div class = 'container boat-gallery-container'>
+  <div class = 'row-fluid thumbnail-carousel'>
+    <div class="col-md-12"><span class = 'hero'>Some fun title capturing the concept of 'waterfowl'</span></div>
+    <div class = 'row-fluid'>
+      <div class="col-md-12 product-container">
+        <div class="carousel slide" id='waterfowl' >
+          <div class="carousel-inner">
+            <% @products_for_slider.each.with_index do |product, i| %>
+              <div class="item text-center <%=i == 0 ? 'active' : ''%>">
+                <div class="col-lg-2 col-sm-4 col-xs-6">
+                  <a href=<%= new_product_path(base_model_id: product.base_model_id) %> ><%= image_tag product.image_path + '/thumbnail.jpg', :class=>"img-responsive thumbnail"%> <span><%=product.name.gsub(' paddle boat', '').pluralize.titleize %></span></a>
+                </div>
+              </div>
+            <% end %>
+          </div>
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="fa fa-chevron-left"></i></a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="fa fa-chevron-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr class = 'boat-gallery-divider' />
+  <div class = 'row-fluid riverboats-container'>
+    <div class = 'col-md-6 img-container text-center'>
+      <a href = <%= product_path(@paddleboats[0]) %> class = 'gallery-image-link'>
+        <%= image_tag (@paddleboats[0].image_path + '/thumbnail.jpg') %><span class = 'gallery-image-descriptor '><%=@paddleboats[0].name.pluralize%></span>
+      </a>
+    </div>
+    <div class = 'col-md-6 img-container text-center'>
+      <a href = <%= product_path(@paddleboats[1]) %> class = 'gallery-image-link'>
+        <%= image_tag (@paddleboats[1].image_path + '/thumbnail.jpg')%><span class = 'gallery-image-descriptor '><%=@paddleboats[1].name.pluralize%></span>
+      </a>
+    </div>
+  </div>
+  <hr class = 'boat-gallery-divider' />
+  <div class = 'row-fluid canoes-container'>
+    <div class = 'col-md-12 img-container text-center'>
+      <a href = <%= product_path(@paddleboats[2]) %> class = 'gallery-image-link'>
+        <%= image_tag (@paddleboats[2].image_path + '/thumbnail.jpg') %><span class = 'gallery-image-descriptor '><%=@paddleboats[2].name.pluralize%></span>
+      </a>
+    </div>
+  </div>
+  <hr class = 'boat-gallery-divider' />
+  <div class = 'row-fluid gondolas-container excursion-boat-container'>
+    <div class = 'col-md-6 img-container text-center'>
+      <a href = <%= product_path(@paddleboats[3]) %> class = 'gallery-image-link'>
+        <%= image_tag (@paddleboats[3].image_path + '/thumbnail.jpg') %><span class = 'gallery-image-descriptor '><%=@paddleboats[3].name.pluralize%></span>
+      </a>
+    </div>
+    <div class = 'col-md-6 img-container text-center'>
+      <a href = <%= product_path(@paddleboats[4]) %> class = 'gallery-image-link'>
+        <%= image_tag (@paddleboats[4].image_path  + '/thumbnail.jpg')%><span class = 'gallery-image-descriptor '><%=@paddleboats[4].name.pluralize%></span>
+      </a>
+    </div>
+  </div>
+</div>
