--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,7 +25,7 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation"><a role="menuitem"  href="/parts">Boat Parts</a></li>
-          <li role="presentation"><a role="menuitem"  href="<%= product_path(Dock.first) %>">Docks</a></li>
+          <li role="presentation"><a role="menuitem"  href="<%= new_shopping_cart_product_path(@shopping_cart, base_model_id: Dock.first.id) %>">Docks</a></li>
           <li role="presentation"><a role="menuitem"  href="/lifts">Lifts</a></li>
         </ul>
       </li>
